Add filter rest for family revision
